BAB 2: Menu Login

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Urban Estate</title>
+    <title>Document</title>
   </head>
   <body>
-    <h1>Welcome to Urban Estate</h1>
-    <p>Your gateway to modern living.</p>
+    <h1>Welcome UrbanEstate</h1>
   </body>
 </html>
