--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UrbanEstate Login | Peer-to-Peer Real Estate Platform</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/login.css" />
   </head>
   <body>
     <main class="main-container">
