BAB 2: Menu Dashboard

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           <strong>Opening hours:</strong> Mon - Sat 9:00 am to 6:00 pm
         </p>
         <nav class="topbar__right">
-          <a href="#">Login</a>
+          <a href="login.html">Login</a>
           <span class="sep"></span>
-          <a class="accent" href="#">Register</a>
+          <a class="accent" href="register.html">Register</a>
           <span class="sep"></span>
-          <a href="#" aria-label="Dashboard">Dashboard</a>
+          <a href="dashboard.html" aria-label="Dashboard">Dashboard</a>
         </nav>
       </div>
     </header>
