BAB 2: Menu Login Edit

--- a/login.html
+++ b/login.html
@@ -62,6 +62,7 @@
             <button type="submit" class="login-btn">Login</button>
 
             <a href="#" class="forgot-password">Forgot Password</a>
+            <a href="register.html" class="forgot-password">Register</a>
           </form>
         </div>
       </section>
