--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
+    <div id="snackbar">Selamat Datang di UrbanEstate! 👋</div>
     <!-- Header Top -->
     <header class="topbar">
       <div class="container topbar__row">
@@ -271,5 +272,9 @@
         </div>
       </div>
     </footer>
+    <button id="scrollTopBtn" class="scroll-top-btn" title="Go to top">
+      ↑
+    </button>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
